<resources>

    <string name="app_name">SMP</string>
    <string name="txtTitulo1">MOTOR</string>
    <string name="txtPatente">Patente</string>
    <string name="txtTituloFrenos">Frenos</string>
    <string name="txtTituloSuspMetalica">Suspensión Metálica</string>
    <string name="txtTituloSistCarga">Sistema de carga</string>
    <string name="txtTituloDirCubNeu">Dirección, cubo de rueda y neumáticos</string>
    <string name="txtTituloAdblue">Adblue</string>
    <string name="txtTituloCompTolva">Compartimiento Tolva</string>
    <string name="txtTituloLista">Estado de vehículos</string>
    <string name="txtTituloListaChequeo">Busqueda de registros</string>
    <string name="txtTituloRegistro">Registro o actualzación de vehículos </string>

    <string name="i1">1. Aceite del motor: verificar nivel.</string>
    <string name="i2">2. Filtro de aire: verificar necesidad de reemplazo o limpieza.</string>
    <string name="i3">3. Filtro de tela de la bomba alimentadora: limpiar.</string>
    <string name="i4">4. Filtro de combustible: drenar agua.</string>
    <string name="i5">5. Sistema de refrigeración: verificar nivel del líquido y completar con la mezcla de agua y etilenoglicol (40%).</string>
    <string name="i6">6. Verificas estado de aspas radiador.</string>
    <string name="i7">7. Correa del motor: verificar estado y tensión.</string>
    <string name="i8">8. Fijación del motor: verificar apriete de soportes de goma.</string>
    <string name="i9">9. Embrague: verificar nivel de líquido.</string>
    <string name="i10">10. Embrague: lubricar bujes del eje de la horquilla (vehículos de 15 a más toneladas).</string>
    <string name="i11">11. Verificar estado del cable de la toma de fuerza.</string>
    <string name="i12">12. Caja de cambios: verificar nivel de aceite y limpiar respiro.</string>
    <string name="i13">13. Caja de cambios: limpiar los tapones magneticos.</string>
    <string name="i14">14. Caja de cambios: cambiar aceite.</string>
    <string name="i15">15. Caja de cambios: lubricar articulaciones de control.</string>
    <string name="i16">16. Árbol de transmisión: apretar soporte, abrazaderas y soporte central.</string>
    <string name="i17">17. Arbol de trasmisión: lubricar juntas universales y manguito deslizante.</string>
    <string name="i18">18. Diferencial: verificar nivel de aceite y limpiar respiro.</string>
    <string name="i19">19. Diferencial: limpiar el (los) tapón(es) magnetico(s) de drenaje OK.</string>
    <string name="i20">20. Diferencial: cambiar aceite.</string>
    <string name="i21">21. Ejes de levas y ajustadores: lubricar.</string>
    <string name="i22">22. Cintas de freno (ajustador manual): verificar desgaste y regular huelgo si es necesario.</string>
    <string name="i23">23. Cintas de freno (ajustador automático): verificar desgaste.</string>
    <string name="i24">24. Cámaras de freno: reapretar fijaciones.</string>
    <string name="i25">25. Tanques de aire de los frenos: drenar.</string>
    <string name="i26">26. Verificar pernos de rueda.</string>
    <string name="i27">27. Dirección hidráulica: verificar nivel del líquido, pérdidas y estado de las mangueras, tuberías y conexiones.</string>
    <string name="i28">28. Junta universal de la columna de dirección: lubricar.</string>
    <string name="i29">29. Pernos maestros: lubricar.</string>
    <string name="i30">30. Verificar desgaste de neumáticos.</string>
    <string name="i31">31. Reapretar tuercas de rueda.</string>
    <string name="i32">32. Suspensiones delantera y trasera: lubricar.</string>
    <string name="i33">33. Grapas, soportes de ballestas, amortiguadores, gemelos, ojales y barras estabilizadoras: reapretar fijaciones.</string>
    <string name="i34">34. Vehículo 8x4: reapretar suspensión.</string>
    <string name="i35">35. Verificar estado de baterías.</string>
    <string name="i36">36. Verificar estado de alternado.</string>
    <string name="i37">37. Grapas, soportes de ballestas, ojales, amortiguadores, bolsas de aire, barra Panhard: reapretar fijación.</string>
    <string name="i38">38. Bolsones de aire: limpiar y verificar estado.</string>
    <string name="i39">39. Válvula niveladora: verificar estado del vástago, verificar altura de la suspensión y regular si necesario.</string>
    <string name="i40">40. Verfificar estado del deposito.</string>
    <string name="i41">41. Rellenar adblue.</string>
    <string name="i42">42. Verificar nivel del liquido hidraulico de la tolva.</string>
    <string name="i43">43. Verificar que el cilindro de levante de la tolva no presente fugas ni abolladuras.</string>
    <string name="i44">44. Verificar funcionamiento lona.</string>
    <string name="i45">45. Luces altas.</string>
    <string name="i46">46. Luces bajas.</string>
    <string name="i47">47. Luces de estacionamiento.</string>
    <string name="i48">48. Luz de freno.</string>
    <string name="i49">49. Luz de reversa + sonido.</string>
    <string name="i50">50. Bocina.</string>

    <string name="txtPatente2">Patente</string>
    <string name="txtModelo">Modelo</string>
    <string name="txtCombustible">Cantidad Combustible</string>
    <string name="txtMotor">Motor</string>
    <string name="txtChasis">Chasis</string>
    <string name="txtKm">Km</string>
    <string name="txtHrs">Hrs</string>
    <string name="txtMin">Min</string>
    <string name="txtGuardar2">Guardar</string>
    <string name="txtHorasMotor">Horas Motor: </string>

    <string name="txtAnio">Año</string>
    <string name="txTipoCombustible">Tipo Combustible</string>

    <string name="btnSiguiente1">Siguiente</string>
    <string name="btnGuardar1">Guardar</string>
    <string name="btnListar">Ver</string>
    <string name="btnVerRegistros">Chequeos</string>
    <string name="btnBuscarRegistros">Buscar</string>
    <string name="btnModificarRegistros">Modificar</string>
    <string name="btnEliminarRegistros">Eliminar</string>
    <string name="btnListaVehiculos">Vehículos</string>
    <string name="btnMenu">Menú</string>
</resources>