<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityChequeo3">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_empresa" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Patente: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Árbol Transmisión y Diferencial"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/i16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i16"
            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/i17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i17"
            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/i18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i18"
            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/i19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i19"
            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/i20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i20"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtTituloFrenos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTituloFrenos"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/i21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i21" />

        <CheckBox
            android:id="@+id/i22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i22" />

        <CheckBox
            android:id="@+id/i23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i23" />

        <CheckBox
            android:id="@+id/i24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i24" />

        <CheckBox
            android:id="@+id/i25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i25" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSiguiente3"
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="Siguiente" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>