<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityRegistrosNuevos">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTRO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtPatente2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtModelo"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="233dp">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCombustible"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtMotor"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="98dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="370dp">

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="52dp"
            android:ems="10"
            android:hint="@string/txtKm"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/txtChasis"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="183dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="462dp">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:ems="10"
            android:hint="@string/txtHrs"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="134dp"
            android:layout_marginRight="134dp"
            android:layout_marginBottom="128dp"
            android:ems="10"
            android:hint="@string/txtMin"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:text="horas motor:" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:text=":" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginLeft="198dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/btnGuardar1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/icono_empresa" />


</androidx.constraintlayout.widget.ConstraintLayout>